fixed form alignment

--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -12,7 +12,11 @@
     color: white;
 }
 
-.btn-secondary {
+.btn-primary:hover{
+    background-color: $accent;
+}
+
+.btn-secondary, .btn-secondary:hover{
     background-color: white;
     color: $accent;
     border: $accent solid 2px;
