--- a/src/assets/styles/_form.scss
+++ b/src/assets/styles/_form.scss
@@ -32,3 +32,7 @@
   height: 40px;
   width: 145px;
 }
+
+.text-danger{
+  font-size: small;
+}
